Add some info to README

--- a/README
+++ b/README
@@ -3,10 +3,19 @@ Building the library requires Google's Protocol Buffers library (available
 at https://developers.google.com/protocol-buffers/).  To build, install
 protocol buffers, and then execute 
 
-PBDIR=<path to bin/protoc and lib/libprotobuf> make
+PROTOC=<path to bin/protoc> PBLIBDIR=<path to libprotobuf> make
 
-Where PBDIR is the base directory in which bin/protoc and lib/libprotobuf
-are located.  Once monarch builds, you can execute the test executable
+For example, if protoc = /usr/bin/protoc and libprotobuf is located at
+/usr/lib64/libprotobuf.so, then
+
+PROTOC=/usr/bin/protoc PBLIBDIR=/usr/lib64 make
+
+Will complete the build.
+
+Once monarch builds, you can execute the test executable
 by running ./monarch_test in the same directory.  It will run a series
 of tests, including throughput tests.  On a 2012 Macbook Air, I measure
 roughly 250MB/s write throughput.
+
+A library, libmonarch.so, will also be created.  This is the library to
+link code against.
