Updated the AUTHORS and README files, and added a LICENSE file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,15 @@
-Lisa McBride
-Jared Kofron
-Dan Furse
-Noah Oblath
+Copyright Holders for Monarch
+-----------------------------
+
+Individuals
+-----------
+Daniel Furse [1]
+Jared Kofron [2]
+Lisa McBride [2]
+Noah S. Oblath [1]
+
+
+Institutions
+------------
+1. Massachusetts Institute of Technology, Cambridge, MA
+2. University of Washington, Seattle, WA
