--- a/README
+++ b/README
@@ -1,21 +1,28 @@
 Monarch is the library for file I/O used by the Project 8 collaboration.
+
 Building the library requires Google's Protocol Buffers library (available 
-at https://developers.google.com/protocol-buffers/).  To build, install
-protocol buffers, and then execute 
+at https://developers.google.com/protocol-buffers/).  Follow the instructions 
+in the included README file to install.
 
-PROTOC=<path to bin/protoc> PBLIBDIR=<path to libprotobuf> make
+Monarch is installed using CMake (version 2.8 or better).
+We recommend an out-of-source build:
+    mkdir build
+    cd build
+    
+To configure the installation:
+    cmake ..
+The .. argument points to the top-level Monarch directory, in this case
+assuming that the build is taking place in the "build" subdirectory.
+ccmake, or cmake-gui may also be used, of course.
 
-For example, if protoc = /usr/bin/protoc and libprotobuf is located at
-/usr/lib64/libprotobuf.so, then
+To build and install:
+    make
+    make install
+    
+The install prefix is specified by the CMake variable CMAKE_INSTALL_PREFIX.
+The library, binaries, and header files will be installed in the 
+lib, bin, and include subdirectories. The default install prefix is the
+build directory.
 
-PROTOC=/usr/bin/protoc PBLIBDIR=/usr/lib64 make
-
-Will complete the build.
-
-Once monarch builds, you can execute the test executable
-by running ./monarch_test in the same directory.  It will run a series
-of tests, including throughput tests.  On a 2012 Macbook Air, I measure
-roughly 250MB/s write throughput.
-
-A library, libmonarch.so, will also be created.  This is the library to
-link code against.
+Any CMake-based projects that will depend on Monarch can include 
+the MonarchConfig.cmake file that is located in the build directory.
