--- a/AUTHORS
+++ b/AUTHORS
@@ -3,13 +3,16 @@ Copyright Holders for Monarch
 
 Individuals
 -----------
-Daniel Furse [1]
-Jared Kofron [2]
-Lisa McBride [2]
-Noah S. Oblath [1]
+Daniel Furse [1]*
+Jared Kofron [3]*
+Lisa McBride [3]*
+Noah S. Oblath [2]
 
 
 Institutions
 ------------
 1. Massachusetts Institute of Technology, Cambridge, MA
+2. Pacific Northwest National Laboratory, Richland, WA
 2. University of Washington, Seattle, WA
+
+* Former institution
