Updating the copyright info

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Individuals
 Christine Claessens [1]
 Daniel Furse [2]*
 Jared Kofron [4]*
+Benjamin LaRoque [3]
 Lisa McBride [4]*
 Noah S. Oblath [3]
 
